<resources>
    <string name="app_name">OpenFin</string>
    <string name="dot">&#8226;</string>
    <string name="welcome">Welcome</string>
    <string name="Skipbutton">Start ></string>
    <string name="welcome1string">Thank You for downloading. OpenFin let\'s Finance managers or Program Orgnizers to Open up Financial details to others with providing realtime sync between transactions. </string>
    <string name="logoimagecontentdiscription">Logo Image for Showcase</string>
    <string name="howitwork">How it Works?</string>
    <string name="welcome2text1">You can choose to create an Account or to Subscribe an Account.</string>
    <string name="welcome2text2">Finance Handling person can generate a sharing code from the home screen of the app and share it with others.
Subscribers will Enter this code to view Finance Manager\'s account balance and transaction details.</string>
    <string name="welcome3title">Feature\'s</string>
    <string name="welcome3text1">\nRealtime transaction sharing.\n\n\nPDF statement Generation.\n\n\nReceipt or CashMemo sharing.</string>
    <string name="welcome4title"> Get Started</string>
    <string name="accountcreateradiotext">Create New Event</string>
    <string name="subscriberadio">Subscribe Account</string>
    <string name="asknameview">Event Name :</string>
    <string name="accountnameedittextviewhint">Enter Event Name</string>
    <string name="askusernameview">Your Name :</string>
    <string name="usernameedittexthint">Enter Your Name</string>
    <string name="askaccountcode">Account Code :</string>
    <string name="accountcodeedittexthint">Enter Account Code</string>
    <string name="startbuttontext">Start Openfin</string>
    <string name="password">Password :</string>
    <string name="passhint">Enter Password</string>
    <string name="logintitle">Sign In</string>
    <string name="email">Email :</string>
    <string name="emailhint">Enter Email</string>
    <string name="buttontext">LogIn / Register</string>
    <string name="myaccountmenu">My Accounts</string>
    <string name="followingmenu">Followings</string>
    <string name="removeads">Remove Ads</string>
    <string name="rate">Rate on Playstore</string>
    <string name="developer">Contact Developer</string>
    <string name="others">Others</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_title">OpenFin</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
