<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="@color/mainblue">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:textAlignment="center"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/welcome2_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vladimir"
        android:textAlignment="center"
        android:text="@string/howitwork"
        android:textColor="@color/white"
        android:textSize="@dimen/welcome1size" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/welcome3text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jurabook"
        android:text="@string/welcome2text2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/welcome1textsize" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/open"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logoimagecontentdiscription" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/welcome2_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jurabook"
        android:text="@string/welcome2text1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/welcome1textsize" />
</LinearLayout>
</android.support.constraint.ConstraintLayout>